# mill-reporting-platform

./: .env.example  .gitignore  LICENSE  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  shift_kpis.csv
docs/: data_dictionary.md  kpi_definitions.md  lineage.md
fabric/: README.md  mill_kpi_curation.py
powerbi/: Mill-Reporting-Platform.pbix  README.md
sql/procedures/: 01_refresh.sql
sql/views/: 01_kpi_views.sql
src/mill/: __init__.py  cli.py  config.py  db.py  schema.py
src/mill/dq/: __init__.py  engine.py
src/mill/governance/: __init__.py  data_dictionary.py  kpi_definitions.py  lineage.py
src/mill/simulator/: __init__.py  faults.py  flowsheet.py  generate.py
src/mill/warehouse/: __init__.py  kpi.py  load.py  views.py
tests/: conftest.py  test_dq.py  test_governance.py  test_incremental.py  test_kpi.py  test_massbalance.py
