[project]
name = "mill-reporting-platform"
version = "0.1.0"
description = "Synthetic gold-mill operational data, warehouse, KPI semantic layer, and data-quality engine for a Power BI report."
requires-python = ">=3.11"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
